k8s/ui/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ui
  labels:
    service: ui
    app: ui

spec:
  replicas: 1
  selector:
    matchLabels:
      service: ui
      app: ui
  template:
    metadata:
      labels:
        service: ui
        app: ui
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/backlinks-81c44/ui/ui:20221009
          name: ui
          imagePullPolicy: Always

          command: ["sh"]
          args: ["-c", "npm start"]

          # resources:
          #   limits:
          #     cpu: 500m
          #     memory: 5Gi
          #   requests:
          #     cpu: 500m
          #     memory: 5Gi

          ports:
            - containerPort: 3000

          # livenessProbe:
          #   httpGet:
          #     scheme: HTTP
          #     path: /live
          #     port: 8001
          #   initialDelaySeconds: 3
          #   periodSeconds: 5

          # readinessProbe params should be used in GKE ingress health check
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /about
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
