k8s/ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: youtubebacklinks-ip4
    networking.gke.io/managed-certificates: ssl-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: ui
spec:
  defaultBackend:
    service:
      name: ui
      port:
        number: 3000
